--- a/src/epub/text/dedication.xhtml
+++ b/src/epub/text/dedication.xhtml
@@ -6,8 +6,8 @@
 		<link href="../css/local.css" rel="stylesheet" type="text/css"/>
 	</head>
 	<body epub:type="bodymatter z3998:fiction">
-		<section id="dedication" epub:type="chapter">
-			<p class="center">
+		<section id="dedication" epub:type="dedication">
+			<p>
 				<i>FOR P. SCHUYLER MILLER who expressed a wish for some Apache colonists,<br/>
 				and CHARLES F. KELLEY who has a liking for “time agent” tales.</i>
 			</p>
