--- a/src/epub/text/dedication.xhtml
+++ b/src/epub/text/dedication.xhtml
@@ -5,11 +5,11 @@
 		<link href="../css/core.css" rel="stylesheet" type="text/css"/>
 		<link href="../css/local.css" rel="stylesheet" type="text/css"/>
 	</head>
-	<body epub:type="bodymatter z3998:fiction">
+	<body epub:type="frontmatter">
 		<section id="dedication" epub:type="dedication">
 			<p>
-				<i>FOR P. SCHUYLER MILLER who expressed a wish for some Apache colonists,<br/>
-				and CHARLES F. KELLEY who has a liking for “time agent” tales.</i>
+				<i>FOR <abbr epub:type="z3998:given-name">P.</abbr> SCHUYLER MILLER who expressed a wish for some Apache colonists,<br/>
+				and CHARLES <abbr epub:type="z3998:given-name">F.</abbr> KELLEY who has a liking for “time agent” tales.</i>
 			</p>
 		</section>
 	</body>
