add line breaks in dedication based on scans

--- a/src/epub/text/dedication.xhtml
+++ b/src/epub/text/dedication.xhtml
@@ -8,8 +8,12 @@
 	<body epub:type="frontmatter">
 		<section id="dedication" epub:type="dedication">
 			<p>
-				<i>FOR <abbr epub:type="z3998:given-name">P.</abbr> SCHUYLER MILLER who expressed a wish for some Apache colonists,<br/>
-				and CHARLES <abbr epub:type="z3998:given-name">F.</abbr> KELLEY who has a liking for “time agent” tales.</i>
+				<i>FOR <abbr epub:type="z3998:given-name">P.</abbr> SCHUYLER MILLER<br/>
+				who expressed a wish<br/>
+				for some Apache colonists,<br/>
+				and CHARLES <abbr epub:type="z3998:given-name">F.</abbr> KELLEY<br/>
+				who has a liking<br/>
+				for “time agent” tales.</i>
 			</p>
 		</section>
 	</body>
