semantics in dedication

--- a/src/epub/text/dedication.xhtml
+++ b/src/epub/text/dedication.xhtml
@@ -8,10 +8,10 @@
 	<body epub:type="frontmatter">
 		<section id="dedication" epub:type="dedication">
 			<p>
-				<i>FOR <abbr epub:type="z3998:given-name">P.</abbr> SCHUYLER MILLER<br/>
+				<i>FOR <span epub:type="z3998:personal-name"><abbr epub:type="z3998:given-name">P.</abbr> SCHUYLER MILLER</span><br/>
 				who expressed a wish<br/>
 				for some Apache colonists,<br/>
-				and CHARLES <abbr epub:type="z3998:given-name">F.</abbr> KELLEY<br/>
+				and <span epub:type="z3998:personal-name">CHARLES <abbr epub:type="z3998:given-name">F.</abbr> KELLEY</span><br/>
 				who has a liking<br/>
 				for “time agent” tales.</i>
 			</p>
