--- a/src/epub/text/dedication.xhtml
+++ b/src/epub/text/dedication.xhtml
@@ -10,7 +10,7 @@
 			<p>
 				<i>FOR <span epub:type="z3998:personal-name"><abbr epub:type="z3998:given-name">P.</abbr> SCHUYLER MILLER</span><br/>
 				who expressed a wish<br/>
-				for some Apache colonists,<br/>
+				for some <span epub:type="z3998:nationality">Apache</span> colonists,<br/>
 				and <span epub:type="z3998:personal-name">CHARLES <abbr epub:type="z3998:given-name">F.</abbr> KELLEY</span><br/>
 				who has a liking<br/>
 				for “time agent” tales.</i>
