--- a/src/epub/text/colophon.xhtml
+++ b/src/epub/text/colophon.xhtml
@@ -17,7 +17,7 @@
 			<p>This ebook was produced for<br/>
 			<a href="https://standardebooks.org">Standard Ebooks</a><br/>
 			by<br/>
-			<a href="PRODUCER_URL">PRODUCER</a>,<br/>
+			<a href="https://kvibber.com">Kelson Vibber</a>,<br/>
 			and is based on a transcription produced in 2008 by<br/>
 			<b epub:type="z3998:personal-name">Elaine Walker</b>, <b epub:type="z3998:personal-name">Greg Weeks</b>, <b epub:type="z3998:personal-name">Jason Isbell</b>, and <a href="https://www.pgdp.net">The Online Distributed Proofreading Team</a><br/>
 			for<br/>
