--- a/src/epub/text/dedication.xhtml
+++ b/src/epub/text/dedication.xhtml
@@ -7,7 +7,8 @@
 	</head>
 	<body epub:type="frontmatter">
 		<section id="dedication" epub:type="dedication">
-			<p><span id="dedication-span-1"></span>
+			<p>
+				<span id="dedication-span-1"/>
 				<i>FOR <span epub:type="z3998:personal-name"><abbr epub:type="z3998:given-name">P.</abbr> SCHUYLER MILLER</span><br/>
 				who expressed a wish<br/>
 				for some <span epub:type="z3998:nationality">Apache</span> colonists,<br/>
