split body into chapters and dedication

--- a/src/epub/text/dedication.xhtml
+++ b/src/epub/text/dedication.xhtml
@@ -7,10 +7,14 @@
 	</head>
 	<body epub:type="bodymatter z3998:fiction">
 		<section id="dedication" epub:type="chapter">
-			<p class="center">
-				<i>FOR P. SCHUYLER MILLER who expressed a wish for some Apache colonists,<br/>
-				and CHARLES F. KELLEY who has a liking for “time agent” tales.</i>
-			</p>
+
+<p class="center"><i>FOR P. SCHUYLER MILLER
+who expressed a wish
+for some Apache colonists,<br />
+and CHARLES F. KELLEY
+who has a liking
+for "time agent" tales.</i></p>
+
 		</section>
 	</body>
 </html>
