--- a/src/epub/text/dedication.xhtml
+++ b/src/epub/text/dedication.xhtml
@@ -9,7 +9,7 @@
 		<section id="dedication" epub:type="chapter">
 			<p class="center">
 				<i>FOR P. SCHUYLER MILLER who expressed a wish for some Apache colonists,<br/>
-				and CHARLES F. KELLEY who has a liking for "time agent" tales.</i>
+				and CHARLES F. KELLEY who has a liking for “time agent” tales.</i>
 			</p>
 		</section>
 	</body>
