Tweak dedication CSS

--- a/src/epub/text/dedication.xhtml
+++ b/src/epub/text/dedication.xhtml
@@ -7,14 +7,12 @@
 	</head>
 	<body epub:type="frontmatter">
 		<section id="dedication" epub:type="dedication">
-			<p>
-				<i>For <b epub:type="z3998:personal-name"><abbr epub:type="z3998:given-name">P.</abbr> Schuyler Miller</b><br/>
-				who expressed a wish<br/>
-				for some <span epub:type="z3998:nationality">Apache</span> colonists,<br/>
-				and <b epub:type="z3998:personal-name">Charles <abbr epub:type="z3998:given-name">F.</abbr> Kelley</b><br/>
-				who has a liking<br/>
-				for “time agent” tales.</i>
-			</p>
+			<p>For <b epub:type="z3998:personal-name"><abbr epub:type="z3998:given-name">P.</abbr> Schuyler Miller</b><br/>
+			who expressed a wish<br/>
+			for some <span epub:type="z3998:nationality">Apache</span> colonists,<br/>
+			and <b epub:type="z3998:personal-name">Charles <abbr epub:type="z3998:given-name">F.</abbr> Kelley</b><br/>
+			who has a liking<br/>
+			for “time agent” tales.</p>
 		</section>
 	</body>
 </html>
